// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculatePasswordStrength returns feedback for weak password 1`] = `
{
  "data": {
    "calculatePasswordStrength": {
      "feedback": {
        "suggestions": [
          "Add more words that are less common.",
          "Avoid repeated words and characters.",
        ],
      },
      "score": 1,
    },
  },
}
`;

exports[`calculatePasswordStrength returns no feedback for strong password 1`] = `
{
  "data": {
    "calculatePasswordStrength": {
      "feedback": {
        "suggestions": [],
      },
      "score": 4,
    },
  },
}
`;
